--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ ul {
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.18);
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     z-index: 2;
 }
