--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ ul {
 .nav_container {
     width: 100%;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
     /* padding: 1rem 2rem; */
     background: rgba(255, 255, 255, 0.25);
